# bejeweled-player

./: .gitignore  CMakeLists.txt  hsv.txt  vcpkg.json
src/: Mouse.cpp  Mouse.hpp  Pattern.cpp  Pattern.hpp  Solver.cpp  Solver.hpp  Window.cpp  Window.hpp  main.cpp
